[gd_scene load_steps=2 format=3 uid="uid://btkagfy4xcs5j"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_06gt1"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06gt1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0313726, 0.027451, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -92.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"
vertical_icon_alignment = 0

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"
vertical_icon_alignment = 0

[node name="Help" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Help
"
vertical_icon_alignment = 0

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"
vertical_icon_alignment = 0

[node name="Title" type="Label" parent="MarginContainer"]
modulate = Color(0.627094, 0.596903, 0.644286, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "DISPELL"
horizontal_alignment = 1

[node name="stars1" type="CPUParticles2D" parent="."]
position = Vector2(183, -71)
amount = 16
speed_scale = 2.0
emission_shape = 5
emission_points = PackedVector2Array()
emission_normals = PackedVector2Array()
emission_colors = PackedColorArray()
direction = Vector2(0, 1)
spread = 90.0
gravity = Vector2(980, 980)
initial_velocity_max = 681.81

[node name="stars2" type="CPUParticles2D" parent="."]
position = Vector2(1067, -74)
amount = 16
speed_scale = 3.0
emission_shape = 5
emission_points = PackedVector2Array()
emission_normals = PackedVector2Array()
emission_colors = PackedColorArray()
direction = Vector2(0, 1)
spread = 110.0
gravity = Vector2(-980, 980)
initial_velocity_max = 681.81

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
